--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,12 @@ main{
     height: 150px;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
+    trasition: 1s;
+}
+
+.gallery img:hover{
+    transform: scale(1.3);
+    z-index: 2;
 }
 
 .gallery p{
