--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,10 @@ main{
 }
 
 .gallery p{
-    font-size: 16px;
+    font-size: 14px;
     color: #333;
     margin: 10px 0;
+    padding-left: 10px;
 }
 
 footer{
